Add langauges switch from configuration files
Support only english and italian

--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,9 @@
+language: it # it or en
 
 environment: dev
 
 telegram:
-    token: ''
+    token: 'telegram_bot_token_here'
 
 permissions:
     events:
